<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.raghavendrashreedhara.list.activity.ListItemsDisplayActivity">
    <item
        android:id="@+id/action_share"
        android:title="Share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_48dp"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_set_reminder"
        android:icon="@drawable/ic_access_alarm_white_48dp"
        android:orderInCategory="100"
        android:title="@string/action_set_reminder"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_accept"
        android:icon="@drawable/ic_action_accept"
        android:orderInCategory="100"
        android:title="@string/action_done"
        app:showAsAction="always" />
</menu>
